--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@babel/plugin-syntax-jsx": "^7.24.1",
     "@babel/preset-env": "^7.24.4",
     "@babel/runtime": "^7.20.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.13",
     "@tsconfig/react-native": "^2.0.2",
     "@types/react": "18.2.0",
     "@types/react-native": "^0.71.4",
@@ -107,7 +108,11 @@
     "url-loader": "^4.1.1",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "webpack-dev-server": "^5.0.4",
+    "react-refresh": "^0.14.2"
+    
+
+    
   },
   "browserslist": {
     "production": [
