--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "react-native start",
     "build-old": "react-scripts build",
     "web-old": "react-scripts start",
-    "build": "webpack --mode production",
-    "web": "webpack serve --open --history-api-fallback",
+    "build": "webpack --config webpack.prod.js",
+    "web": "webpack serve --config webpack.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "SERVISOFTS S.R.L.",
@@ -109,7 +109,8 @@
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
-    "react-refresh": "^0.14.2"
+    "react-refresh": "^0.14.2",
+    "webpack-merge": "^5.10.0"
     
 
     
