--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "app_kolping",
+  "name": "kolping_app",
   "version": "1.0.9",
-  "description": "app_kolping",
+  "description": "kolping_app",
   "scripts": {
     "start": "react-native start",
     "build-old": "react-scripts build",
@@ -17,7 +17,6 @@
     "@mapbox/geo-viewport": "^0.4.0",
     "@notifee/react-native": "^7.8.2",
     "@react-native-async-storage/async-storage": "1.19.1",
-    "@react-native-camera-roll/camera-roll": "5.8.0",
     "@react-native-community/geolocation": "3.1.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^14.8.0",
@@ -80,8 +79,7 @@
     "xlsx": "^0.18.5",
     "xlsx-color": "^0.14.30",
     "react-facebook-login": "^4.1.1",
-    "react-google-login": "^5.2.2",
-    "react-native-camera": "^4.2.1"
+    "react-google-login": "^5.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.4",
