--- a/ios/Podfile
+++ b/ios/Podfile
@@ -91,7 +91,7 @@ target 'kolping_app' do
   
   pod 'RNSound', :path => '../node_modules/react-native-sound'
   # pod 'react-native-fetch-blob', :path => '../node_modules/react-native-fetch-blob'
-  pod 'react-native-webview', :path => '../node_modules/react-native-webview'
+  # pod 'react-native-webview', :path => '../node_modules/react-native-webview'
 
 end
 
