--- a/ios/kolping_app/Info.plist
+++ b/ios/kolping_app/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Casa Grande</string>
+	<string>Kolping</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -58,7 +58,7 @@
 	<key>FacebookAppID</key>
 	<string>793641328579171</string>
 	<key>FacebookDisplayName</key>
-	<string>Casa Grande</string>
+	<string>Kolping</string>
 	<key>FirebaseAppDelegateProxyEnabled</key>
 	<true/>
 	<key>LSRequiresIPhoneOS</key>
