--- a/ios/kolping_app/kolping_app.entitlements
+++ b/ios/kolping_app/kolping_app.entitlements
@@ -10,7 +10,7 @@
 	</array>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applinks:casagrande.servisofts.com</string>
+		<string>applinks:kolping.servisofts.com</string>
 	</array>
 </dict>
 </plist>
