--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build-old": "react-scripts build",
     "web-old": "react-scripts start",
     "build": "webpack --config webpack.prod.js",
-    "web": "NODE_OPTIONS=--max-old-space-size=4096 webpack serve --config webpack.dev.js",
+    "web": "webpack serve --config webpack.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "SERVISOFTS S.R.L.",
