--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,8 +4,9 @@ buildscript {
     ext {
         buildToolsVersion = "30.0.3"
         minSdkVersion = 26
-        compileSdkVersion = 33
-        targetSdkVersion = 33
+        compileSdkVersion = 34
+        targetSdkVersion = 34
+        kotlinVersion = "1.8.10" 
         googlePlayServicesAuthVersion = "19.2.0"
         ndkVersion = "23.1.7779620"
     }
@@ -17,18 +18,13 @@ buildscript {
     dependencies {
         classpath("com.android.tools.build:gradle:7.3.1")
         classpath("com.facebook.react:react-native-gradle-plugin")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion") // Añadir esta línea
         classpath('com.google.gms:google-services:4.3.15')
     }
 }
 
 subprojects { subproject ->
-        if(project['name'] == 'servisofts-background-location'){
-            project.configurations { compile { } }
-        }
-          if(project['name'] == 'servisofts-component'){
-            project.configurations { compile { } }
-        }
-        if(project['name'] == 'servisofts-socket'){
-            project.configurations { compile { } }
-        }
+    if (project.name in ['servisofts-background-location', 'servisofts-component', 'servisofts-socket']) {
+        project.configurations { compile { } }
+    }
 }
