--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "servisofts-charts": "^1.0.1",
-    "servisofts-component": "3.0.41",
+    "servisofts-component": "file:../../servisofts-component/dist",
     "servisofts-db": "^1.0.7",
     "servisofts-model": "^1.0.7",
     "servisofts-page": "^1.0.12",
