--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "firebase": "^9.6.11",
     "google-map-react": "^2.1.6",
     "html-react-parser": "^1.2.8",
+    "install": "^0.13.0",
     "jwt-decode": "^3.1.2",
+    "npm": "^10.9.0",
+    "pdf-viewer-reactjs": "^2.2.3",
     "react": "18.2.0",
     "react-apple-login": "1.1.6",
     "react-dom": "18.2.0",
