--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "react-native-maps": "1.7.1",
     "react-native-notifications": "^5.1.0",
     "react-native-permissions": "^3.10.1",
-    "react-native-reanimated": "^3.8.1",
+    "react-native-reanimated": "3.11.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "3.25.0",
     "react-native-share": "^7.9.1",
@@ -77,7 +77,7 @@
     "servisofts-rn-roles_permisos": "1.0.6-b",
     "servisofts-rn-spdf": "^1.0.5",
     "servisofts-rn-usuario": "1.0.11",
-    "servisofts-socket": "4.0.4",
+    "servisofts-socket": "^4.0.5",
     "servisofts-table": "1.0.2",
     "supercluster": "^6.0.2",
     "uninstall": "^0.0.0",
