--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kolping_app",
+  "name": "kolping_app2",
   "version": "1.0.10",
   "description": "kolping_app",
   "scripts": {
@@ -68,7 +68,7 @@
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "servisofts-charts": "^1.0.1",
-    "servisofts-component": "3.0.50-beta",
+    "servisofts-component": "file:../../servisofts-component/dist",
     "servisofts-db": "^1.0.7",
     "servisofts-model": "^1.0.7",
     "servisofts-page": "^1.0.12",
@@ -109,10 +109,10 @@
     "ts-loader": "^9.5.1",
     "typescript": "4.8.4",
     "url-loader": "^4.1.1",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4",
-    "webpack-merge": "^5.10.0"
+    "webpack": "5.91.0",
+    "webpack-cli": "5.1.4",
+    "webpack-dev-server": "5.0.4",
+    "webpack-merge": "5.10.0"
   },
   "browserslist": {
     "production": [
